View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027286 | Open CASCADE | OCCT:Visualization | public | 2016-03-18 11:52 | 2016-04-20 15:49 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027286: Visualization, TKOpenGl - avoid using light index within built-in GLSL programs for simplest configuration | ||||
Description | Some broken OpenGL ES drivers fail on compiling the simplest GLSL lighting program. The proposed patch workarounds this problem. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | v3d glsl gouraud_dir1, v3d glsl gouraud_dir2, v3d glsl phong_dir1, v3d glsl phong_dir2 | ||||
|
Branch CR27286 has been created by kgv. SHA-1: 2deb7def4a9401d693659ac2abb8f3280f6dffb0 Detailed log of new commits: Author: kgv Date: Fri Mar 18 11:56:02 2016 +0300 0027286: Visualization, TKOpenGl - avoid using light index within built-in GLSL programs for simplest configuration OpenGl_ShaderManager::stdComputeLighting() - handle single directional light specifically for compatibility with broken OpenGL ES drivers. |
|
Branch CR27286 has been updated by kgv. SHA-1: 1978533977e6958b80581afa4c6be6075cb4f976 Detailed log of new commits: Author: kgv Date: Wed Mar 23 12:41:05 2016 +0300 Added test cases for using built-in GLSL shading programs. |
|
Branch CR27286_1 has been created by kgv. SHA-1: 71612bd990dbd7a34be5331f2efeacbab78a49f5 Detailed log of new commits: Author: kgv Date: Wed Mar 23 12:42:17 2016 +0300 0027286: Visualization, TKOpenGl - avoid using light index within built-in GLSL programs for simplest configuration OpenGl_ShaderManager::stdComputeLighting() - handle single directional light specifically for compatibility with broken OpenGL ES drivers. Added test cases using built-in GLSL shading programs. |
|
Patch is ready for review in branch CR27286_1. |
|
Branch CR27286_1 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR27286_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 71612bd990dbd7a34be5331f2efeacbab78a49f5 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 68 (68 on master) Windows: 0 (0 on master) MacOS :1113 Regressions/Differences/Improvements: No regressions/differences Testing cases: http://occt-tests/CR27286-1-master-OCCT/Debian70-64/v3d/glsl/gouraud_dir1.html http://occt-tests/CR27286-1-master-OCCT/Windows-64-VC10/v3d/glsl/gouraud_dir1.html v3d glsl gouraud_dir1: OK http://occt-tests/CR27286-1-master-OCCT/Debian70-64/v3d/glsl/gouraud_dir2.html http://occt-tests/CR27286-1-master-OCCT/Windows-64-VC10/v3d/glsl/gouraud_dir2.html v3d glsl gouraud_dir2: OK http://occt-tests/CR27286-1-master-OCCT/Debian70-64/v3d/glsl/phong_dir1.html http://occt-tests/CR27286-1-master-OCCT/Windows-64-VC10/v3d/glsl/phong_dir1.html v3d glsl phong_dir1: OK http://occt-tests/CR27286-1-master-OCCT/Debian70-64/v3d/glsl/phong_dir2.html http://occt-tests/CR27286-1-master-OCCT/Windows-64-VC10/v3d/glsl/phong_dir2.html v3d glsl phong_dir2: OK Testing on Linux: occt component : Total MEMORY difference: 89014944 / 90317345 [-1.44%] Total CPU difference: 19228.990000000053 / 19527.21000000009 [-1.53%] products component : Total MEMORY difference: 25506086 / 25421542 [+0.33%] Total CPU difference: 5263.73999999999 / 5392.869999999985 [-2.39%] Testing on Windows: occt component : Total MEMORY difference: 57466716 / 57488011 [-0.04%] Total CPU difference: 18014.823878898846 / 17687.970583698847 [+1.85%] products component : Total MEMORY difference: 17839798 / 17805226 [+0.19%] Total CPU difference: 5125.272454099953 / 5113.307177399962 [+0.23%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR27286_1 is TESTED. |
|
Please assign the issue back to Open CASCADE project, it was reassigned by mistake. |
|
Branch CR27286 has been deleted by kgv. SHA-1: 1978533977e6958b80581afa4c6be6075cb4f976 |
|
Branch CR27286_1 has been deleted by kgv. SHA-1: 71612bd990dbd7a34be5331f2efeacbab78a49f5 |
occt: master f68acbf4 2016-03-23 09:42:17 Committer: bugmaster Details Diff |
0027286: Visualization, TKOpenGl - avoid using light index within built-in GLSL programs for simplest configuration OpenGl_ShaderManager::stdComputeLighting() - handle single directional light specifically for compatibility with broken OpenGL ES drivers. Added test cases using built-in GLSL shading programs. |
Affected Issues 0027286 |
|
mod - src/OpenGl/OpenGl_ShaderManager.cxx | Diff File | ||
mod - tests/v3d/glsl/begin | Diff File | ||
add - tests/v3d/glsl/gouraud_dir1 | Diff File | ||
add - tests/v3d/glsl/gouraud_dir2 | Diff File | ||
add - tests/v3d/glsl/phong_dir1 | Diff File | ||
add - tests/v3d/glsl/phong_dir2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-18 11:52 | kgv | New Issue | |
2016-03-18 11:52 | kgv | Assigned To | => kgv |
2016-03-18 11:56 | git | Note Added: 0051770 | |
2016-03-23 12:41 | git | Note Added: 0051876 | |
2016-03-23 12:42 | git | Note Added: 0051877 | |
2016-03-23 12:43 | kgv | Note Added: 0051878 | |
2016-03-23 12:43 | kgv | Assigned To | kgv => san |
2016-03-23 12:43 | kgv | Status | new => resolved |
2016-03-23 12:43 | kgv | Target Version | 7.1.0 => 7.0.0 |
2016-03-23 15:25 |
|
Note Added: 0051888 | |
2016-03-23 15:25 |
|
Assigned To | san => bugmaster |
2016-03-23 15:25 |
|
Status | resolved => reviewed |
2016-03-23 15:56 |
|
Assigned To | bugmaster => apv |
2016-03-23 15:56 |
|
Assigned To | apv => mkv |
2016-03-24 13:26 |
|
Note Added: 0051945 | |
2016-03-24 13:27 |
|
Note Added: 0051946 | |
2016-03-24 13:27 |
|
Assigned To | mkv => bugmaster |
2016-03-24 13:27 |
|
Status | reviewed => tested |
2016-03-24 13:27 |
|
Test case number | => v3d glsl gouraud_dir1, v3d glsl gouraud_dir2, v3d glsl phong_dir1, v3d glsl phong_dir2 |
2016-03-29 15:55 | bugmaster | Changeset attached | => occt master f68acbf4 |
2016-03-29 15:55 | bugmaster | Status | tested => verified |
2016-03-29 15:55 | bugmaster | Resolution | open => fixed |
2016-04-04 10:37 | bugmaster | Project | Open CASCADE => Bentley Systems |
2016-04-04 15:16 |
|
Note Added: 0052341 | |
2016-04-04 15:16 |
|
Status | verified => feedback |
2016-04-04 15:16 |
|
Resolution | fixed => reopened |
2016-04-04 15:58 | bugmaster | Project | Bentley Systems => Open CASCADE |
2016-04-04 16:03 | bugmaster | Status | feedback => tested |
2016-04-04 16:03 | bugmaster | Status | tested => verified |
2016-04-04 16:03 | bugmaster | Resolution | reopened => fixed |
2016-04-17 12:57 | git | Note Added: 0052791 | |
2016-04-17 12:57 | git | Note Added: 0052792 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |