0027286: Visualization, TKOpenGl - avoid using light index within built-in GLSL programs for simplest configuration

OpenGl_ShaderManager::stdComputeLighting() - handle single directional light specifically
for compatibility with broken OpenGL ES drivers.

Added test cases using built-in GLSL shading programs.